add cusomters email

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,7 @@
+
 <h1>This is a list of products</h1>
+<%= link_to "Sign Up", customers_path %>
+
 <ul>
   <% for product in @products %>
     <li><%= product.name %></li>
