add customer mailer

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 
 <h1>This is a list of products</h1>
-<%= link_to "Sign Up", customers_path %>
+<%= link_to "Sign Up", sign_up_path %>
 
 <ul>
   <% for product in @products %>
