--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,6 @@
+<% if flash[:notice].present? %>
+  <div class="notice"><%= flash[:notice] %></div>
+<% end %>
 
 <h1>This is a list of products</h1>
 <%= link_to "Sign Up", sign_up_path %>
