--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -12,9 +12,9 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field" align="center">
     <%= f.label :email, "Find out when we go live:" %>
     <%= f.text_field :email %>
-    <%= f.submit "Sign Up" %>
+    <%= f.submit "Sign Up", class: "btn btn-default"%>
   </div>
 <% end %>
