--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -78,7 +78,7 @@
         <h3> <%= product.name.capitalize  %></h3>
         <p>Product Details</p>
         <p>
-          <%= link_to "View", admin_product_path(product), class: "btn btn-primary" , role:  "button"%>
+          <%= link_to "View", product_path(product), class: "btn btn-primary" , role:  "button"%>
        <a href="#" class="btn btn-default" role="button">Buy</a>
 
 
