--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -7,9 +7,9 @@
   </ul>
 <% end %>
 
+<div class="jumbotron">
 
-<div align="left">
-<%= form_for [:admin, @product], html: { class="form-horizontal" role="form"} do |f| %>
+<%= form_for [:admin, @product], html: { class: "form-horizontal", role: "form"} do |f| %>
 
   <%= f.label :name %>
   <%= f.text_field :name %>
