--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Betastore Admin</title>
-    <%= csrf_meta_tag %>
+    <%= csrf_meta_tags %>
     <!-- Bootstrap -->
    <%= stylesheet_link_tag "application" %>
+     <%= javascript_include_tag "application" %>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,6 +25,6 @@
 
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-     <%= javascript_include_tag "application" %>
+
   </body>
 </html>
