--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,11 @@
 
-<nav class="navbar navbar-inverse" role="navigation">
+<nav class="navbar navbar-inverse " role="navigation">
+<!--
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+-->
   <div class="container-fluid">
+
+
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -9,13 +14,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">BETASTORE</a>
+      <a class="navbar-brand" href="/">BETASTORE</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">PRODUCTS</a></li>
+        <li class="active"><%= link_to "PRODUCTS", products_path %></li>
         <li><a href="#">MORE</a></li>
 
       </ul>
@@ -35,6 +40,28 @@
         <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: 'Search' %>
 
         </div>
+
+        <select class="form-control">
+        <option>Filter</option>
+         <option>Price</option>
+         <option>Review</option>
+
+
+        </select>
+
+  <!--
+        <div class="btn-group">
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+    Filters <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">Price</a></li>
+
+    <li class="divider"></li>
+    <li><a href="#">Separated link</a></li>
+  </ul>
+</div>
+-->
         <button type="submit" class="btn btn-default">Search</button>
         <% end %>
 
@@ -50,7 +77,7 @@
                <li> <a href="">Welcome, <%= current_customer.name %></a></li>
           <% end %>
 
-        <li><a href="#">Admin</a></li>
+        <li><a href="admin/products">Admin</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Customers <b class="caret"></b></a>
           <ul class="dropdown-menu">
@@ -71,46 +98,53 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+<!--
+<div class="intro-header">
+<div class="container">
+-->
 
-<div class="row">
+      <div class="row">
 
-<% i = 0 %>
-<% for product in @products %>
+      <% i = 0 %>
+      <% for product in @products %>
 
-  <% if product %>
-    <% i+=1 %>
+        <% if product %>
+          <% i+=1 %>
 
-  <!--
-   <span class="label label-success">
-    <%= product.name %>
-    </span>
-   -->
-    <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <%= image_tag(product.image_url, size: "320x200") %>
+        <!--
+         <span class="label label-success">
+          <%= product.name %>
+          </span>
+         -->
+          <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <%= image_tag(product.image_url, size: "320x200") %>
 
-      <div class="caption">
-        <h3> <%= product.name.capitalize  %></h3>
-        <p>Product Details</p>
-        <p>
-          <%= link_to "View", product_path(product), class: "btn btn-primary" , role:  "button"%>
-       <a href="#" class="btn btn-default" role="button">Buy</a>
+            <div class="caption">
+              <h3> <%= product.name.capitalize  %></h3>
+              <p>Product Details</p>
+              <p>
+                <%= link_to "View" , product_path(product), class: "btn btn-primary" , role:  "button"%>
+                <%= link_to "Buy" , add_product_to_cart_path(product),  class: "btn btn-default" , role:  "button"  %>
+                <!--
+                  <a href="#" class="btn btn-default" role="button">Buy</a>
+                -->
+              </p>
+            </div>
+          </div>
+          </div>
 
 
-        </p>
+    <% if i.modulo(3).zero? %>
+    <!-- Close div row-->
       </div>
-    </div>
-    </div>
+      <div class="row">
+    <% end %>
+        <% else %>
+      <!-- if run out of products from product list then close the row div-->
+          </div>
+        <% end %>
 
-
-      <% if i.modulo(3).zero? %>
-        </div>
-        <div class="row">
-      <% end %>
-
-  <% else %>
-    </div>
-  <% end %>
 
 
 
