adding calculation total amount

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,7 +20,7 @@
             <p>
             <%= button_to add_product_to_cart_path(@product), class: "btn btn-default" do  %>
             <span class="glyphicon glyphicon-shopping-cart"></span>
-             Add To Card
+             Add To Cart
             <% end %>
             </p>
           </div>
