--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,8 +1,15 @@
 <ol class="breadcrumb">
 <%= link_to "PRODUCTS", products_path %>
 </ol>
-<h1>Your Cart</h1>
 
+<% @order.errors.full_messages.each do |error| %>
+  <div class="alert alert-danger">
+    <%= error %>
+  </div>
+<% end %>
+<h1>Checkout</h1>
+
+<%= form_for(@order, html: { class: 'form-horizontal', role: 'form'}) do |f| %>
  <table class="table">
    <tr>
      <th>Product</th>
@@ -10,16 +17,87 @@
      <th>Unit Price</th>
      <th>Total Price</th>
    </tr>
-   <% for line_item in @order.line_items %>
-     <tr>
-       <td><%= line_item.product.name %></td>
-       <td><%= line_item.quantity %></td>
-       <td><%= number_to_currency line_item.product.price %></td>
-       <td><%#= number_to_currency line_item.total_price %></td>
-     </tr>
-   <% end %>
+
+   <%= f.fields_for :line_items do |li| %>
+      <%= li.hidden_field :product_id %>
+      <tr>
+        <td><%= li.object.product.name %></td>
+        <td><%= li.number_field :quantity, style: 'width: 50px' %></td>
+        <td><%= number_to_currency li.object.product.price %></td>
+        <td><%= number_to_currency li.object.total_price %></td>
+      </tr>
+    <% end %>
+
+
    <tr>
      <td colspan="3"></td>
      <td><%= number_to_currency @order.total_amount %></td>
    </tr>
  </table>
+
+
+
+  <%= f.fields_for :credit_card_attributes, @order.creditcard do |cc| %>
+    <div class="form-group">
+      <%= cc.label :card_number, class: 'col-sm-2 control-label' %>
+      <div class="col-sm-4">
+        <%= cc.text_field :cardnum, class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= cc.label :expiration_date, class: 'col-sm-2 control-label' %>
+      <div class="col-sm-2">
+        <%= cc.text_field :expire_on, class: 'form-control', placeholder: 'mm/yyyy' %>
+      </div>
+    </div>
+  <% end %>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-4">
+      <button type="submit" class="btn btn-success">Place Order</button>
+    </div>
+  </div>
+  <% end %>
+
+<!--
+
+ <div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <form role="form">
+        <div class="form-group">
+          <label>Cardholder's Name</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label>Card Number</label>
+          <input type="text" class="form-control" name=>
+
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="form-group">
+              <label>Exp Date</label>
+               <input type="text" class="form-control" placeholder="MM/YYYY">
+
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="form-group">
+              <label>CVC</label>
+              <input type="text" class="form-control" placeholder="Ex. 331">
+            </div>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Pay Now</button>
+      </form>
+    </div>
+    <div class="col-md-4"></div>
+    <div class="col-md-4"></div>
+  </div>
+</div>
+
+-->
+
