--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -77,6 +77,12 @@
                <li> <a href="">Welcome, <%= current_customer.name %></a></li>
           <% end %>
 
+          <li><%= link_to cart_path do %>
+
+            <span class="glyphicon glyphicon-shopping-cart"></span>
+            Cart
+            <% end %>
+          </li>
         <li><a href="admin/products">Admin</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Customers <b class="caret"></b></a>
